v21.0.4
- Allow control of recording and timers access

v21.0.3
- Translations updates from Weblate
	- de_de, es_es, fi_fi, it_it, ru_ru

v21.0.2
 - Add missing return ChannelGroup return code
 - Stop caching LiveStreams.xml

v21.0.1
- Return error if channel calls are made when not connected
- Fast poll for servers after returning from sleep
- Changes to backend art delivery, request fanart if possible

v21.0.0
- Connection change, start in connnecting state, defer unreachable state.

v20.4.0
- Add support for multiple NextPVR instances
- Adjust for Nexus change in Channel Group order
- Reorder timers so valid entry timer is default
- Add configurable heartbeat
- Improve event logging state messages
- Optionally disable comskip support by instance
- Instant recordings can occur at current time

v20.3.1
- Implement advanced recording title search
- Adjust for Nexus change in Channel Group order

v20.3.0
- Kodi inputstream API update to version 3.2.0
- Kodi PVR API update to version 8.0.2

v20.2.4
- All sorting by recording directory
- Allow faster reconnect attempts on startup

v20.2.3
- Remove backend forced season/episode support

v20.2.2
- Send channel groups in NextPVR order

v20.2.1
- Used cached group counts for GetChannelGroupsAmount()

v20.2.0
- Translation updates by Weblate
- Kodi main API update to version 2.0.0

v20.1.3
- Fix for Kodi marking in-progress recordings as watched

v20.1.2
- Remove obsolete V4 settings from settings.xml
- Load and save only V5 settings
- Remove conditional settings from code
- Remove obsolete V4 timeshifting modes

v20.1.1
- Block access for v4 backend users
- Don't try and reconnect server after sleep announced
- Handle situations where Kodi requests timer updates without a recording update
- Document no provider support
- Remove EDL limit check
- Support new API XML to get recording specific art

v20.1.0
- Kodi API to 8.0.0
  - Add supports recordings delete capability
  - Enforce EDL limits

v20.0.0